// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff states > then renders diff content with lines 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:a] change a                                                                   ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**change[border:│][BG:selectedBg:󰛦 [warning:src/file.ts]                                              [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: src/file.ts (a)                                                              ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│]  diff --git a/src/file.ts b/src/file.ts                                            [border:│]",
  "[borderAccent:│]                                 [border:│]  index abc123..def456 100644                                                       [border:│]",
  "[borderAccent:│]                                 [border:│]  --- a/src/file.ts                                                                 [border:│]",
  "[borderAccent:│]                                 [border:│]  +++ b/src/file.ts                                                                 [border:│]",
  "[borderAccent:│]                                 [border:│]  @@ -1,3 +1,5 @@                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]   line 1                                                                           [border:│]",
  "[borderAccent:│]                                 [border:│]  +added line                                                                       [border:│]",
  "[borderAccent:│]                                 [border:│]   line 2                                                                           [border:│]",
  "[borderAccent:│]                                 [border:│]  -removed line                                                                     [border:│]",
  "[borderAccent:│]                                 [border:│]  +another added                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]   line 3                                                                           [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`diff states > then renders diff with scroll offset 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:a] change a                                                                   ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**change[border:│][BG:selectedBg:󰛦 [warning:src/file.ts]                                              [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: src/file.ts (a)                                                              ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│]  line 4                                                                            [border:│]",
  "[borderAccent:│]                                 [border:│]  line 5                                                                            [border:│]",
  "[borderAccent:│]                                 [border:│]  line 6                                                                            [border:│]",
  "[borderAccent:│]                                 [border:│]  line 7                                                                            [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`diff states > then renders no content for empty diff 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:a] change a                                                                   ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**change[border:│][dim: No files changed]                                                             [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: all (a)                                                                      ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;
